@@ -29,6 +29,7 @@ bool CheckLength(int,int,RenumMessageId,...);
 bool CheckTextID(uint,uint,uint);
 bool CheckID(uint,uint);
 
+void Init0();
 void Init123();
 void final123();
 void Init7();
@@ -39,11 +40,12 @@ void finalF();
 bool IsLabel(uint);
 //int GetBit(const string&);
 
-enum ActBit{ACT0=1,ACT1=2,ACT3=4,ACT4=8,EMPTY1=0x10,OVERRIDE3=0x20,GENERIC3=0x40};
+enum ActBit{ACT0=1,ACT1=2,ACT3=4,ACT4=8,EMPTY1=0x10,OVERRIDE3=0x20,GENERIC3=0x40,ACT3_BEFORE_PROP08=0x80};
 enum sanstate{UNKNOWN,FIND_PSEUDO,FIND_REAL,FIND_INCLUDE,FIND_RECOLOR,FIND_REAL_OR_RECOLOR};
 
 bool IsValidFeature(int actbits,uint feat);
 bool IsValid2Feature(uint feat);
+bool IsProp08Set(uint feat,uint id);
 uchar Get2Type(uint feat);
 uint MaxFeature();
 
