@@ -21,6 +21,7 @@ v3.4.3 to
 - Variational action 2 operator 10.
 - Make --data also report the data-file location.
 - Check for duplicate IDs in an action 3.
+- Check that prop 08 has been set before the action 3, when necessary.
 
 v3.4.2 to v3.4.3 (r1244)
 - Permit Action 1/2/3 for bridges (Callback 33)
